force-app/main/default/objects/Inventory__c/fields/Console__c.field-meta.xml
<CustomField>
    <fullName>Console__c</fullName>
    <label>Console</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PlayStation 2 (PS2) - Sony</fullName>
            </value>
            <value>
                <fullName>PlayStation 3 (PS2) - Sony</fullName>
            </value>
            <value>
                <fullName>PlayStation 4 (PS2) - Sony</fullName>
            </value>
            <value>
                <fullName>PlayStation 5 (PS2) - Sony</fullName>
            </value>
            <value>
                <fullName>Super Nintendo Entertainment System (SNES) - Nintendo</fullName>
            </value>
            <value>
                <fullName>Nintendo Entertainment System (NES) - Nintendo</fullName>
            </value>
            <value>
                <fullName>Nintendo Switch - Nintendo</fullName>
            </value>
            <value>
                <fullName>Nintendo Wii - Nintendo</fullName>
            </value>
            <value>
                <fullName>Game Boy - Nintendo</fullName>
            </value>
            <value>
                <fullName>Sega Genesis - Sega</fullName>
            </value>
            <value>
                <fullName>Xbox One - Microsoft</fullName>
            </value>
            <value>
                <fullName>Xbox 360 - Microsoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>