force-app/main/default/objects/Inventory__c/fields/InventoryStatus__c.field-meta.xml
<CustomField>
    <fullName>InventoryStatus__c</fullName>
    <description>This formula checks if are any inventory item available to be rent</description>
    <formula>IF(
    AvailableItemsQuantity__c = 0,
    &apos;Unavailable&apos;,
    &apos;Available&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Status</label>
    <type>Text</type>
</CustomField>