force-app/main/default/objects/Inventory__c/fields/ItemsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ItemsQuantity__c</fullName>
    <label>Items Quantity</label>
    <summaryForeignKey>Inventory_Item__c.Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>