force-app/main/default/objects/Inventory__c/fields/Synopse__c.field-meta.xml
<CustomField>
    <fullName>Synopse__c</fullName>
    <label>Synopse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>