force-app/main/default/objects/Inventory__c/recordTypes/Games.recordType-meta.xml
<RecordType>
    <fullName>Games</fullName>
    <active>true</active>
    <label>Games</label>
</RecordType>