force-app/main/default/objects/Inventory__c/recordTypes/Movie.recordType-meta.xml
<RecordType>
    <fullName>Movie</fullName>
    <active>true</active>
    <label>Movie</label>
</RecordType>